# fastmcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.purecipher-registry  README.ja.md  README.md  SECUREMCP_DEV.md  SKILL.md  SYNC_WITH_UPSTREAM.md  docker-compose.purecipher-registry.yml  justfile  loq.toml  pyproject.toml  skill.json
.claude/: settings.json
.cursor/rules/: securemcp-dev.mdc
.gate/: test-run.json
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/scripts/: triage-label.sh
.github/workflows/: hol-skill-validate.yml  martian-test-failure.yml  martian-triage-issue.yml  marvin-comment-on-issue.yml  marvin-comment-on-pr.yml  marvin-dedupe-issues.yml  marvin-label-triage-aw.lock.yml  marvin-label-triage-aw.md  marvin-label-triage.yml  marvin-test-failure.yml  minimize-resolved-reviews.yml  publish-fastmcp-client.yml  publish-fastmcp-remote.yml  publish-fastmcp-tasks.yml  publish-fastmcp.yml  publish.yml  reopen-on-issue-assignment.yml  require-issue-link.yml  run-schema-crash-test.yml  run-static.yml  run-tests.yml  run-upgrade-checks.yml  sync.yml  update-config-schema.yml  update-sdk-docs.yml
docs/: changelog.mdx  docs.json  fastmcp-analytics.js  python-sdk-pages.json  updates.mdx  v3-banner.js  v3-navigation.json
docs/apps/: architecture.mdx  components.mdx  development.mdx  examples.mdx  overview.mdx  (+7 more)
examples/: custom_tool_serializer_decorator.py  hash_verification_example.py  in_memory_proxy_example.py  mount_example.py  remote_server_twzrd.py  secure_mcp_client.py  tags_example.py  task_elicitation.py  text_me.py  tool_result_echo.py
fastmcp_remote/: README.md
fastmcp_slim/: fastmcp_slim.pth  pyproject.toml
fastmcp_tasks/: README.md  pyproject.toml
fastmcp_tasks/fastmcp_tasks/: __init__.py  client.py  client_models.py  components.py  context.py  creation.py  dependencies.py  extension.py  handlers.py  input_loop.py  input_store.py  keys.py  lifespan.py  models.py  settings.py  wire_production.py  worker_cli.py
log/: task1.md  tasks.md
scripts/: auto_close_needs_mre.py  setup_uv_env.sh  sync_upstream.py
tests/: conftest.py  test_apps.py  test_apps_prefab.py  test_compat.py  test_examples_importable.py  test_exceptions.py  test_fastmcp_app.py  test_mcp_config.py  test_no_legacy_httpx.py  test_settings.py  test_settings_double_underscore_alias.py  test_upgrade_from_v3.py
(+1201 files in other folders)
